--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@rokat/web-toolkit",
-  "version": "0.1.1",
-  "description": "HTTP fetch helpers for Next.js projects.",
+  "version": "0.1.0",
+  "description": "Modern utilities and HTTP fetch helpers for Next.js projects.",
   "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
